--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body{
   </p>
 
   <div class="qr">
-    <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=details.html">
+    <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://ronycse16b.github.io/damo/details.html" alt="QR Code">
   </div>
 
   <p>অথবা নিচের বাটনে ক্লিক করুন</p>
